too tired to make any real commit message MOVED everything to nginx to reduce overhead and increase performance, fixed some stuff in moda.css removed the sesion checkers from cargar eliminar and eliminartodos cause that was too much of a hassle Modified response.php so that the header has constants instead of vars

--- a/docs/src/css/modal.css
+++ b/docs/src/css/modal.css
@@ -63,7 +63,7 @@
     align-items: center;
     justify-content: space-between;
 }
-.modal-close{
+.modal-nav .modal-close{
     position: unset;
 }
 .modal-nav .button{
